--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -37,4 +37,8 @@
             Sign in
         </button>
     </form>
+
+    <p class="mt-3">
+        Немає акаунту? <a href="{{ path('app_register') }}">Зареєструватися</a>
+    </p>
 {% endblock %}
