--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,6 +14,10 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
+
+    <p class="mt-3">
+        Вже маєте акаунт? <a href="{{ path('app_login') }}">Увійти</a>
+    </p>
 {% endblock %}
