--- a/templates/item/index.html.twig
+++ b/templates/item/index.html.twig
@@ -1,37 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Item index{% endblock %}
+{% block title %}Список товарів{% endblock %}
 
 {% block body %}
-    <h1>Item index</h1>
+    <div class="container mt-5">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1>Список товарів</h1>
+        </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for item in items %}
-            <tr>
-                <td>{{ item.id }}</td>
-                <td>{{ item.name }}</td>
-                <td>{{ item.price }}</td>
-                <td>
-                    <a href="{{ path('app_item_show', {'id': item.id}) }}">show</a>
-                    <a href="{{ path('app_item_edit', {'id': item.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Назва</th>
+                        <th>Ціна</th>
+                        <th>Дії</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in items %}
+                        <tr>
+                            <td>{{ item.name }}</td>
+                            <td>{{ item.price }} грн</td>
+                            <td>
+                                <a href="{{ path('app_item_show', {'id': item.id}) }}" class="btn btn-info btn-sm">Деталі</a>
+                                {% if is_granted('ROLE_USER') %}
+                                    <form action="{{ path('app_cart_add', {'id': item.id}) }}" method="post" class="d-inline">
+                                        <button type="submit" class="btn btn-success btn-sm">Додати до кошика</button>
+                                    </form>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="3" class="text-center">Товари не знайдено</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
-    <a href="{{ path('app_item_new') }}">Create new</a>
+        {% if is_granted('ROLE_USER') %}
+            <div class="mt-3">
+                <a href="{{ path('app_cart_index') }}" class="btn btn-primary">Перейти до кошика</a>
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
