--- a/templates/item/show.html.twig
+++ b/templates/item/show.html.twig
@@ -1,30 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Item{% endblock %}
+{% block title %}{{ item.name }}{% endblock %}
 
 {% block body %}
-    <h1>Item</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ item.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ item.name }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ item.price }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_item_index') }}">back to list</a>
-
-    <a href="{{ path('app_item_edit', {'id': item.id}) }}">edit</a>
-
-    {{ include('item/_delete_form.html.twig') }}
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="h3 mb-0">{{ item.name }}</h1>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="h4 mb-4">Назва товару: {{ item.name }}</p>
+                        <p class="h4 mb-4">Ціна: {{ item.price }} грн</p>
+                        
+                        {% if is_granted('ROLE_USER') %}
+                        {% endif %}
+                        
+                        <a href="{{ path('app_item_index') }}" class="btn btn-secondary">Назад до списку</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
