--- a/templates/_partials/navbar_auth.html.twig
+++ b/templates/_partials/navbar_auth.html.twig
@@ -9,6 +9,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('app_cart_index') }}">Кошик</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_order') }}">Мої замовлення</a>
+                </li>
                 {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_admin_items') }}">
