--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,16 @@
             {{ include('_partials/navbar_auth.html.twig') }}
         {% endif %}
 
+        <div class="container mt-3">
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        </div>
+
         {% block body %}{% endblock %}
     </body>
 </html>
